--- a/.github/workflows/daily_quote.yml
+++ b/.github/workflows/daily_quote.yml
@@ -13,5 +13,6 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            - uses: actions/checkout@v3
             - run: pip install -r requirements.txt
             - run: python daily_quote.py
