--- a/.github/workflows/daily_quote.yml
+++ b/.github/workflows/daily_quote.yml
@@ -7,8 +7,12 @@ on:
     schedule:
         - cron: '0/5 * * * *'
 
-jobs:
+env:
+    NOTION_API: ${{ secrets.NOTION_API}}
+    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+jobs:
     run:
         runs-on: ubuntu-latest
 
