--- a/.github/workflows/daily_quote.yml
+++ b/.github/workflows/daily_quote.yml
@@ -3,10 +3,11 @@ name: daily quote
 permissions:
     contents: write
 
-on:
+on: 
     # notddion 생성 시간을 고려하여 01시(UTC +9)로 설정
     schedule:
         - cron: '0/5 * * * *'
+    workflow_dispatch:
 
 env:
     NOTION_API: ${{ secrets.NOTION_API}}
